Switch to avy-goto-char-timer
This seems to work better in practice as I can usually type a few
characters for the search.

--- a/init.org
+++ b/init.org
@@ -504,7 +504,7 @@ switch to it when using isearch.
 
 #+BEGIN_SRC emacs-lisp
   (use-package avy
-    :bind (("C-\\" . avy-goto-char-2)
+    :bind (("C-\\" . avy-goto-char-timer)
            :map isearch-mode-map
            ("C-\\" . avy-isearch)))
 #+END_SRC
