--- a/init.org
+++ b/init.org
@@ -229,7 +229,24 @@ Allow simultaneous editing in multiple places with iedit and multiple cursors.
 #+BEGIN_SRC emacs-lisp
   (use-package iedit)
   (use-package multiple-cursors
-    :bind (("C-c ;" . mc/edit-lines)))
+    :bind ("C-c ;" . multiple-cursors-hydra/body)
+    :config
+    (defhydra multiple-cursors-hydra (:columns 3)
+      "Multiple cursors"
+      ("l" mc/edit-lines "edit lines" :exit t)
+      ("n" mc/mark-next-like-this "next")
+      ("p" mc/mark-previous-like-this "prev")
+      ("a" mc/mark-all-like-this "mark all":exit t)
+      ("N" mc/skip-to-next-like-this "skip")
+      ("P" mc/skip-to-previous-like-this "skip")
+      ("r" mc/mark-all-in-region-regexp "regexp" :exit t)
+      ("M-n" mc/unmark-next-like-this "unmark")
+      ("M-p" mc/unmark-previous-like-this "unmark")
+      ("q" nil nil)
+      ("#" mc/insert-numbers "numbers" :exit t)
+      ("<mouse-1>" mc/add-cursor-on-click nil)
+      ("<down-mouse-1>" ignore nil)
+      ("<drag-mouse-1>" ignore nil)))
 #+END_SRC
 
 * Moving, insertion, duplication, and deletion
