Show (s)css files in a different window

--- a/init.org
+++ b/init.org
@@ -311,8 +311,8 @@ Use purpose to keep types of buffer in the same buffer.
     (add-to-list 'purpose-user-mode-purposes '(org-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(web-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(html-mode . edit))
-    (add-to-list 'purpose-user-mode-purposes '(scss-mode . edit))
-    (add-to-list 'purpose-user-mode-purposes '(css-mode . edit))
+    (add-to-list 'purpose-user-mode-purposes '(scss-mode . test))
+    (add-to-list 'purpose-user-mode-purposes '(css-mode . test))
     (add-to-list 'purpose-user-mode-purposes '(javascript-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(magit-mode . tr))
     (add-to-list 'purpose-user-mode-purposes '(dired-mode . tr))
