Elm is indented by 4 spaces, not 2. My bad.

--- a/init.org
+++ b/init.org
@@ -742,9 +742,7 @@ Use dante https://github.com/jyp/dante for a better haskell experience.
 ** Elm
 
 #+BEGIN_SRC emacs-lisp
-  (use-package elm-mode
-    :config
-    (setq elm-indent-offset 2))
+  (use-package elm-mode)
 #+END_SRC
 
 * Snippets
