Ruby indentation fix. Now rubocop will complain less.

--- a/init.org
+++ b/init.org
@@ -603,6 +603,7 @@ Configure ruby mode.
                 ("C-c , r" . dockspec-rerun))
     :config
     (add-hook 'ruby-mode-hook (lambda ()
+                                (setq ruby-align-chained-calls t)
                                 (if (buffer-file-name)
                                     (if (string-match "_spec\\.rb\\'" buffer-file-name)
                                         (dockspec)))))
